Se cambio ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <section class="yo" id="Aboutme">
-        <img src="file:///C:/Users/Mati/Desktop/Mati/Mati/Foto%20linkedin.jpg" alt="Matias Velazquez Segovia"
+        <img src="Imag/Foto linkedin.jpg" alt="Matias Velazquez Segovia"
             class="yo-img" />
         <div class="bio animate__animated animate__shakeX">
             <h2 class="titulo">About me</h2>
@@ -51,7 +51,7 @@
         <h2 class="titulo-de-proyectos">Mis Proyectos</h2>
         <div class="contenedorProyectos">
             <div class="contenedor-de-proyectos tarjeta-de-proyectos">
-                <img src="file:///C:/Users/Mati/Desktop/ProyectoLaboII.jpg"
+                <img src="Imag/ProyectoLaboII.jpg"
                     alt="Sistema de Gestion de Electrodomesticos" class="proyectoImagenes" />
                 <h3 class="tituloproyectos">Venta de Electrodomesticos</h3>
                 <p class="detalles-proyecto">
@@ -63,7 +63,7 @@
                     target="_blank">Check it Out</a>
             </div>
             <div class="contenedor-de-proyectos tarjeta-de-proyectos ">
-                <img src="file:///C:/Users/Mati/Desktop/ProyectoPrograIII.jpg" alt="Proyecto Winforms"
+                <img src="Imag/ProyectoPrograIII.jpg" alt="Proyecto Winforms"
                     class="proyectoImagenes" />
                 <h3 class="tituloproyectos">Windforms Web</h3>
                 <p class="detalles-proyecto">
