--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="bio animate__animated animate__shakeX">
             <h2 class="titulo">About me</h2>
             <p class="textoBio">
-                Comenze la tecnicatura en Agosto del 2022, me encuentro cursando mi cuarto cuatrimestre.
+                Comence la tecnicatura en Agosto del 2022, me encuentro cursando mi cuarto cuatrimestre.
                 Me quedan 8 materias para poder lograr esta meta que jamas hubiese imaginado.
                 Soy un amante de los animales, tengo 5 hijos perrunos, me encanta viajar y realizar trekkings.
             </p>
